Added footer section in the html code

--- a/index.html
+++ b/index.html
@@ -203,13 +203,54 @@
                 </p>
                 <a href="" class="post-read-more">Continue Reading ....</a>
             </article>
-            
+
 
         </aside>
     </section>
 
 
     <!-- footer  -->
+    <footer>
+        <div class="about">
+            <h1><span class="logo-text">Hello</span><span>Blog</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo nisi maxime. Consectetur laboriosam cum
+                incidunt illo voluptatibus accusantium qui vero quisquam sed.</p>
+        </div>
+        <!-- contacts  -->
+        <div class="contact">
+            <span>
+                <i class="fas fa-phone">+91 65879423</i>
+            </span>
+            <span>
+                <i class="fas fa-envelop">
+                    <a href="mailto:fakeemail@gmail.com"></a>
+                </i>
+            </span>
+
+        </div>
+
+        <!-- socials  -->
+        <div class="socials">
+            <a href="https://www.google.com"></a>
+            <i class="fab fa-youtube"></i>
+        </div>
+        <div class="socials">
+            <a href="https://www.google.com"></a>
+            <i class="fab fa-instagram"></i>
+        </div>
+        <div class="socials">
+            <a href="https://www.google.com"></a>
+            <i class="fab fa-twitter"></i>
+        </div>
+        <div class="socials">
+            <a href="https://www.google.com"></a>
+            <i class="fab fa-facebook"></i>
+        </div>
+
+
+        
+
+    </footer>
 
 
 </body>
